#2617 Use ImmutableList