@@ -1,5 +1,6 @@
 package ua.com.fielden.platform.eql.stage2.operands.functions;
 
+import com.google.common.collect.ImmutableList;
 import ua.com.fielden.platform.entity.AbstractEntity;
 import ua.com.fielden.platform.eql.stage2.TransformationContextFromStage2To3;
 import ua.com.fielden.platform.eql.stage2.TransformationResultFromStage2To3;
@@ -11,7 +12,10 @@ import ua.com.fielden.platform.eql.stage3.operands.functions.ConcatOf3;
 import ua.com.fielden.platform.eql.stage3.sundries.OrderBy3;
 import ua.com.fielden.platform.eql.stage3.sundries.Yields3;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.toSet;
@@ -26,14 +30,14 @@ public class ConcatOf2 extends TwoOperandsFunction2<ConcatOf3> {
             final List<OrderBy2> orderItems)
     {
         super(operand1, operand2, operand1.type());
-        this.orderItems = List.copyOf(orderItems);
+        this.orderItems = ImmutableList.copyOf(orderItems);
     }
 
     public ConcatOf2(
             final ISingleOperand2<? extends ISingleOperand3> operand1,
             final ISingleOperand2<? extends ISingleOperand3> operand2)
     {
-        this(operand1, operand2, List.of());
+        this(operand1, operand2, ImmutableList.of());
     }
 
     @Override
@@ -56,7 +60,7 @@ public class ConcatOf2 extends TwoOperandsFunction2<ConcatOf3> {
         final var secondTr = operand2.transform(firstTr.updatedContext);
 
         var ctx = secondTr.updatedContext;
-        final var orderItems3 = new ArrayList<OrderBy3>(orderItems.size());
+        final var orderItems3 = ImmutableList.<OrderBy3>builderWithExpectedSize(orderItems.size());
         for (final var item : orderItems) {
             final var itemTr = item.transform(ctx, Yields3.EMPTY);
             orderItems3.add(itemTr.item);
@@ -64,7 +68,7 @@ public class ConcatOf2 extends TwoOperandsFunction2<ConcatOf3> {
         }
 
         return new TransformationResultFromStage2To3<>(
-                new ConcatOf3(firstTr.item, secondTr.item, type, orderItems3),
+                new ConcatOf3(firstTr.item, secondTr.item, type, orderItems3.build()),
                 ctx);
     }
 
