@@ -1,5 +1,6 @@
 package ua.com.fielden.platform.eql.stage3.operands.functions;
 
+import com.google.common.collect.ImmutableList;
 import ua.com.fielden.platform.entity.query.DbVersion;
 import ua.com.fielden.platform.eql.meta.PropType;
 import ua.com.fielden.platform.eql.stage3.operands.ISingleOperand3;
@@ -23,11 +24,11 @@ public class ConcatOf3 extends TwoOperandsFunction3 {
             final List<OrderBy3> orderItems)
     {
         super(operand1, operand2, type);
-        this.orderItems = List.copyOf(orderItems);
+        this.orderItems = ImmutableList.copyOf(orderItems);
     }
 
     public ConcatOf3(final ISingleOperand3 operand1, final ISingleOperand3 operand2, final PropType type) {
-        this(operand1, operand2, type, List.of());
+        this(operand1, operand2, type, ImmutableList.of());
     }
 
     @Override
